--- a/contentpage.html
+++ b/contentpage.html
@@ -43,7 +43,7 @@
         
         <BR>
         <LI>CHAPTER 5</LI>
-        <ol type="i">
+        <ol type="1">
             <LI>JOURNEY TO ASIA     (PAGE 20)</LI>
             <OL TYPE="i">
                 <li>india     </li>
@@ -53,7 +53,7 @@
         </ol>
         <BR>
         <LI>CHAPTER 6</LI>
-        <ol type="i">
+        <ol type="1">
             <LI>JOURNEY TO AUSTRALIA   (PAGE 23)</LI>
             <OL TYPE="i">
                 <li>perth</li>
@@ -63,7 +63,7 @@
         </ol>
         <BR>
         <LI>CHAPTER 7</LI>
-        <ol type="i">
+        <ol type="1">
             <LI>JOURNEY TO EUROPE     (PAGE 25)</LI>
             <OL TYPE="i">
                 <li>portugal</li>
